@@ -105,6 +105,12 @@ typedef struct gerb_image_info {
     double offset_a;
     double offset_b;
     enum encoding_t encoding;
+    double scale_factor_A;  /* SF parameters */
+    double scale_factor_B;
+    int step_and_repeat_X;  /* SR parameters */
+    int step_and_repeat_Y;
+    double step_and_repeat_dist_X;
+    double step_and_repeat_dist_Y;
 } gerb_image_info_t;
 
 
